--- a/index.css
+++ b/index.css
@@ -1,32 +1,39 @@
 @import '@economist/component-palette';
 
 :root{
-  --balloon-triangle-size: 8px;
+  --balloon-triangle-size: 6px;
 }
 
 .balloon {
   position: relative;
   display: inline;
+  font-size: 1rem;
 }
 
 .balloon-content {
-  font-size: 1rem;
   background: var(--balloon-content__background, var(--color-berlin));
   padding: var(--subscribe-message__padding-h, var(--grid-spacing-rabbit)) var(--subscribe-message__padding-v, var(--grid-gutter-s));
   position: absolute;
   top: 100%;
+  margin-top: var(--balloon-triangle-size);
   box-sizing: border-box;
 }
 
+.balloon--shadow {
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.19), 0 6px 10px rgba(0, 0, 0, 0.23);
+}
+
+.balloon--not-visible .balloon__link:after,
 .balloon--not-visible .balloon-content {
-  visibility: hidden;
+  display: none;
 }
 
+.balloon--visible .balloon__link:after,
 .balloon--visible .balloon-content {
-  visibility: visible;
+  display: block;
 }
 
-.balloon-content:after {
+.balloon__link:after {
   content: '';
   display: block;
   width: 0;
@@ -35,7 +42,7 @@
   border-width: 0 var(--balloon-triangle-size) var(--balloon-triangle-size) var(--balloon-triangle-size);
   border-color: transparent transparent  var(--balloon-triangle-background, var(--color-berlin)) transparent;
   position: absolute;
-  top: calc(-(var(--balloon-triangle-size)));
+  bottom: calc(-(var(--balloon-triangle-size)));
   left: 50%;
   margin-left: calc(-(var(--balloon-triangle-size)/2));
 }
