--- a/example.css
+++ b/example.css
@@ -1,7 +1,7 @@
 @import '@economist/component-typography';
 @import '@economist/component-palette';
-@import '@economist/component-grid';
 @import "index.css";
+
 body {
   -webkit-font-smoothing: antialiased;
 }
@@ -13,6 +13,10 @@ body {
   height: 70px;
   width: 40%;
   display: table-cell;
+}
+
+.balloon-example a {
+  color: white;
 }
 
 .balloon-content {
