Added capability to use Button as trigger element

--- a/example.css
+++ b/example.css
@@ -1,5 +1,6 @@
 @import '@economist/component-typography';
 @import '@economist/component-palette';
+@import '@economist/component-link-button';
 @import "index.css";
 
 body {
