--- a/example.css
+++ b/example.css
@@ -11,7 +11,7 @@ body {
   background-color: var(--color-kiev);
   color: white;
   height: 70px;
-  width: 25%;
+  width: 20%;
   display: table-cell;
   padding: 20px;
   box-sizing: border-box;
@@ -45,4 +45,8 @@ body {
 
 .right {
   text-align: right;
+}
+
+.customClassname.customClassname--not-visible .content {
+  display: none;
 }
