--- a/src/example.css
+++ b/src/example.css
@@ -1,41 +1,37 @@
 @import '@economist/component-typography';
 @import '@economist/component-palette';
 @import '@economist/component-link-button';
-@import "index.css";
-
-body {
-  -webkit-font-smoothing: antialiased;
-}
+@import 'index.css';
 
 .balloon-example {
-  background-color: var(--color-kiev);
-  color: white;
-  height: 70px;
-  width: 20%;
   display: table-cell;
-  padding: 20px;
   box-sizing: border-box;
+  width: 20%;
+  height: 70px;
+  padding: 20px;
+  color: #fff;
+  background-color: var(--color-kiev);
 }
 
-.balloon-example a {
-  color: white;
-  border: solid white 1px;
+.balloon-link {
   padding: 10px;
+  color: #fff;
   white-space: nowrap;
+  border: solid #fff 1px;
 }
 
 .balloon-content {
-  color: black;
   width: 300px;
+  color: #000;
 }
 
 .component-panel {
   overflow: hidden;
 }
 
-@media (width<=800px) {
+@media (width <= 800px) {
   .no-mobile {
-    display: none !important;
+    display: none;
   }
   .balloon-example {
     display: inline-block;
@@ -47,6 +43,6 @@ body {
   text-align: right;
 }
 
-.customClassname--not-visible .content {
+.custom-classname--not-visible .content {
   display: none;
 }
