--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,21 @@
 @import '@economist/component-palette';
 @import '@economist/component-grid';
 
-:root{
+:root {
   --balloon-triangle-size: 6px;
 }
 
 .balloon {
-  position: relative;
   display: inline;
+  position: relative;
   font-size: 1rem;
 }
 
 .balloon-content {
-  background: var(--balloon-content__background, var(--color-berlin));
-  padding: var(--subscribe-message__padding-h, 2em) var(--subscribe-message__padding-v, var(--grid-gutter-s));
-  position: absolute;
   box-sizing: border-box;
+  position: absolute;
+  padding: var(--subscribe-message__padding-h, 2em) var(--subscribe-message__padding-v, var(--grid-gutter-s));
+  background: var(--balloon-content__background, var(--color-berlin));
   z-index: 1;
 }
 
@@ -31,11 +31,11 @@
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.19), 0 6px 10px rgba(0, 0, 0, 0.23);
 }
 
-.balloon--not-visible .balloon__link:after {
+.balloon--not-visible .balloon__link::after {
   display: none;
 }
 
-.balloon--visible .balloon__link:after {
+.balloon--visible .balloon__link::after {
   display: block;
 }
 
@@ -52,19 +52,19 @@
 }
 
 .balloon--position-top .balloon__triangle {
-  transform: rotate(180deg);
   top: 0;
+  transform: rotate(180deg);
 }
 
 .balloon__triangle {
-  position: absolute;
   display: block;
+  position: absolute;
+  left: 50%;
   width: 0;
   height: 0;
-  border-style: solid;
-  border-color: transparent transparent  var(--balloon-triangle-background, var(--color-berlin)) transparent;
-  left: 50%;
   margin-left: -var(--balloon-triangle-size);
+  border-color: transparent transparent  var(--balloon-triangle-background, var(--color-berlin)) transparent;
+  border-style: solid;
   border-width: 0 var(--balloon-triangle-size) var(--balloon-triangle-size) var(--balloon-triangle-size);
   z-index: 2;
 }
