--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
   font-size: 1rem;
 }
 
+.navigation__main-navigation--desktop .balloon-content:focus {
+  outline: none;
+}
+
 .balloon-content {
   box-sizing: border-box;
   position: absolute;
